<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details_title"
                android:text="@string/fake_title"
                android:layout_weight="1"
                style="@style/detail_title"
                android:padding="8dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/details_image"
                    android:src="@drawable/hardoceded_w185"
                    android:padding="0dp"

                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/details_release_date"
                        android:gravity="center"
                        android:text="@string/fake_release_date" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/details_user_rating"
                        android:text="@string/fake_rating"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/details_id"
                        android:text="@string/fake_id"
                        android:gravity="center"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_favorites"
                        android:text="@string/btn_MarkAsFavorites"
                        android:textColor="@color/colorTitleFont"
                        android:background="@color/colorTitleBack"
                        android:padding="16dp"/>




                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details_synopsys"
                android:text="@string/fake_overview"
                android:layout_weight="0"
                />










        </LinearLayout>


    </ScrollView>





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_section_title" />


        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/videos_ListView"
            >

        </ListView>


    </LinearLayout>











</LinearLayout>